--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start:dev": "ng serve --configuration development",
     "start:prod": "ng serve --configuration prod",
     "build": "ng build",
+    "build:dev": "ng build",
+    "build:prod": "ng build --configuration prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
