--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "start:dev": "ng serve --configuration development",
     "start:prod": "ng serve --configuration prod",
-    "build": "ng build",
+    "build": "ng build ",
     "build:dev": "ng build",
     "build:prod": "ng build --configuration prod",
     "watch": "ng build --watch --configuration development",
@@ -31,6 +31,7 @@
     "@angular/cli": "~15.2.4",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.1.4",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
